daemonset.yml
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: nginx
spec:
  selector:
    matchLabels:
      app: nginxdaemonset
  template:
    metadata:
      labels:
        app: nginxdaemonset
    spec:
      containers:
      - name: nginx
        image: nginx
        ports:
          - containerPort: 80
