deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sampledeployment
  labels:
    app: myapp
spec:
  replicas: 5
  selector:
    matchLabels:
      app: sample1
  template:
    metadata:
      labels:
        app: sample1
    spec:
      containers:
        - name: nginx
          image: nginx:1.20
          ports:
            - containerPort: 80
