hostpath-volumemount.yml
apiVersion: v1
kind: Pod
metadata:
  name: hostpath
spec:
  containers:
    - name: testcont
      image: redis
      volumeMounts:
        - mountPath: /mount 
          name: testvolume          
  volumes:
    - name: testvolume
      hostPath:
        path: /var/data
