multicont.yml
apiVersion: v1
kind: Pod
metadata:
  name: multicont
spec:
  containers:
  - name: nginx
    image: nginx
    volumeMounts:
      - name: nginx-volume
        mountPath: /usr/share/nginx/
  - name: alpine
    image: alpine
  volumes:
    - name: nginx-volume
