nginx1.yml
apiVersion: v1
kind: Pod
metadata:
  name: nginx
  namespace: default
  labels:
    name: nginx
spec:
  containers:
    - name: nginxc
      image: nginx
