pod_scheduling.yml
apiVersion: v1
kind: Pod
metadata:
  name: app2
spec:
  containers:
  - name: app2
    image: nginx
  nodeName: smi-331
