podschedulelabel.yml
apiVersion: v1
kind: Pod
metadata:
  name: myapp
spec:
  containers:
  - name: myapp
    image: alpine
  nodeSelector:
    disk: normal
