sharedvolumemount.yml
apiVersion: v1
kind: Pod
metadata:
  name: sharedvolume
spec:
  volumes:
    - name: sharedvolume
      emptyDir:
        {}
  containers:
  - name: nginx
    image: nginx
    volumeMounts:
      - name: sharedvolume
        mountPath: /usr/share/nginx/html
  - name: debian
    image: debian
    volumeMounts:
      - name: sharedvolume
        mountPath: /html
    command: ["/bin/sh", "-c", "echo test >> /html/index.html", "sleep 5", done]
