nginxservice.yml
apiVersion: v1
kind: Pod
metadata:
  name: nginxservice
  labels:
    app: labelnginx
spec:
  containers:
  - name: contnginx
    image: nginx:1.20
    ports:
      - name: nginxport
        containerPort: 80

---


apiVersion: v1
kind: Service
metadata:
  name: nginxservice
spec:
  selector:
    app: labelnginx
  ports:
  - protocol: TCP
    port: 80
    targetPort: 30100
