service-nginx.yml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: service
  name: nginxservice
spec:
  type: NodePort
  selector:
    app: web
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
      nodePort: 30099
