ingress-controller.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-test
spec:
  rules:
  - host: nginx
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: nginxservice
            port: 
              number: 80
